--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -32,3 +32,17 @@
         width: 10rem;
     }
 }
+
+#super {
+  color: 	#FF9224;
+  font-size: 2rem;
+}
+
+#superr {
+  color: #00BB00;
+  font-size: 1.5rem;
+}
+
+#navv {
+  color: black;
+}
