--- a/src/components/Mood.css
+++ b/src/components/Mood.css
@@ -40,7 +40,7 @@
 
 #image1{
   width:80%;
-  /*border-radius: 9999px;*/
+  border-radius: 9999px;
 }
 
 #image2{
@@ -57,4 +57,8 @@
 #image4{
   width:80%;
   border-radius: 9999px;
+}
+
+#b {
+  border-radius: 4px;
 }
